Horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @font-face { font-family: Inter; font-weight: 500; src: url(fonts/Inter-SemiBold.ttf); }
 
 
-body {background:linear-gradient(160deg, #555 0%, #559 100%); color:#eee; font-family:Inter, sans-serif; min-height:100vh; margin:0; padding:0; overflow-x:hidden;}
+body {background:linear-gradient(160deg, #555 0%, #559 100%); color:#eee; font-family:Inter, sans-serif; min-height:100vh; margin:0; padding:0; overflow-x:hidden; max-width:100vw;}
 article {padding:30px 10px; }
 #wizard {max-width:720px; padding:0; margin:0 auto; background:#eee; color:#222; border-radius: 10px 10px 0 0; box-shadow: 0 0 30px #000; }
 #wizard h1 {background:linear-gradient(180deg, #dbdbdb 0%, #d6d6d6 100%); border-width:1px 0; border-style:solid; border-color:#e8e8e8 #000 #a7a7a7 #000; margin:0; padding: 14px 0; font-size: 100%; text-align:center; border-radius: 10px 10px 0 0;}
